# mroW

./: .gitignore  README.md  TODO.txt  mroW.cabal  package.yaml  stack.yaml
app/: GLProgram.hs  Main.hs  OpenGLHelpers.hs  Tools.hs
data/: catTexture.data
fonts/: CISFPolandballLicense.txt
shaders/: Fullscreen_vert.glsl  GUI.frag  HUD.frag  Main_frag.glsl  PostProcessing_frag.glsl  Scene.frag  Scene.vert
src/: Behaviour.hs  Camera.hs  Common.hs  FontBuilder.hs  FreeTypeHelpers.hs  Game.hs  GameState.hs  Logger.hs  Menu.hs  Mixer.hs  OpenGLHelpers.hs  Platform.hs  Player.hs  Program.hs
test/: GameSpec.hs
