name:                mroW
version:             0.1.0.0
synopsis:            It's a game
homepage:            https://github.com/andreeL/mroW#readme
author:              Andrée Lindgren
maintainer:          N/A
copyright:           2017 Author Andrée Lindgren
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/andreeL/mroW#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Behaviour
                     , Camera
                     , Common
                     , FontBuilder
                     , FreeTypeHelpers
                     , Game
                     , OpenGLHelpers
                     , Player
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , freetype2
                     , linear
                     , microlens-platform
                     , OpenGLRaw
                     , vector
  default-language:    Haskell2010

executable mroW-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mroW
                     , GLFW-b
                     , OpenGLRaw
                     , stm
                     , linear
  default-language:    Haskell2010

test-suite mroW-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mroW
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       GameSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andreeL/mroW
